--- a/minecraft/tacz/tacz_default_gun/assets/tacz/lang/zh_tw.json
+++ b/minecraft/tacz/tacz_default_gun/assets/tacz/lang/zh_tw.json
@@ -1,5 +1,5 @@
 {
-  "pack.tacz.tacz_default_gun.name": "TAC Zero預設內容包",
+  "pack.tacz.tacz_default_gun.name": "TAC Zero預設內容包烙賽",
   "pack.tacz.tacz_default_gun.desc": "這個國家在上帝的領導下將獲得自由的新生，而民有、民治、民享的政府將不會從地球上消失。",
   "tacz.type.ammo.name": "彈藥",
   "tacz.type.pistol.name": "手槍",
